# SimpleCompressionService

./: .gitignore  README.md  build.sh  run_scs.sh
SimpleCompressionService/: CMakeLists.txt  build.sh
SimpleCompressionService/api/: request.h  response.h  utilities.h
SimpleCompressionService/include/: server.h
SimpleCompressionService/src/: main.c  processor.c  processor.h  requests_queue.c  server.c  utilities.c
TestClient/: CMakeLists.txt
lib_common/: CMakeLists.txt
lib_common/include/: request.h  response.h  utilities.h
lib_common/src/: utilities.c
lib_utilities/: CMakeLists.txt  utilities.h
lib_utilities/include/: utilities.h
simple_compr_service/: CMakeLists.txt
simple_compr_service/api/: request.h
simple_compr_service/src/: acceptor.c  acceptor.h  algo.c  algo.h  internal_request.h  internal_response.c  internal_response.h  logging_utilities.c  logging_utilities.h  main.c  processor.c  processor.h  queue.c  queue.h  receiver.c  receiver.h  receiver_logging.c  receiver_logging.h  requests_queue.c  requests_queue.h  responses_queue.c  responses_queue.h  sender.c  sender.h  server.c  server.h  worker.c  worker.h
test_client/: CMakeLists.txt
test_client/config/: files_list  request_files  requests_1
test_client/src/: config.c  config.h  connection.c  connection.h  internal_request.c  internal_request.h  main.c  main_config.h  networking.c  networking.h  receiver.c  receiver.h  requests_generation.c  requests_generation.h  requests_import.c  requests_import.h  sender.c  sender.h  senders_manager.c  senders_manager.h  test_data.h  uuid.c  uuid.h  workers_manager.c  workers_manager.h
